# wappalyzer

./: README.rst  pyproject.toml  pytest.ini  update-technologies.py
Wappalyzer/: Wappalyzer.py  __init__.py  fingerprint.py  technologies.py
Wappalyzer/webpage/: _bs4.py  _common.py
tests/: test_wappalyzer.py
