[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "wappalyzer"
packages = [{include = "Wappalyzer"}]
readme = "README.rst"
version = "0.2.4"

[tool.poetry.dependencies]
aiofiles = "^24.1.0"
aioresponses = "^0.7.4"
cached-property = "^1.5.2"
httpx = "^0.24.1"
lxml = "^4.9.3"
pytest-asyncio = "^0.21.1"
python = ">=3.9,<3.12"
regex = "^2024.11.6"
selectolax = "^0.3.27"
orjson = "^3.10.18"
hyperscan = "^0.7.21"

[tool.poetry.dev-dependencies]
black = "^23.7.0"

[tool.poetry.group.dev.dependencies]
respx = "^0.21.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
